[WTR] WebKitTestRunner is not cleaning up the icon database https://bugs.webkit.org/show_bug.cgi?id=100678

Patch by Thiago Marcos P. Santos <thiago.santos@intel.com> on 2012-10-31
Reviewed by Kenneth Rohde Christiansen.

The icon database was not being set to the temporary folder created for
the test runner by the test driver, which is removed automatically
after the run.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::initialize):

Canonical link: https://commits.webkit.org/118902@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133024 268f45cc-cd09-0410-ab3c-d52691b4dbfc